--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,9 +1,16 @@
-.logo{
+.logo-header{
   max-width: 200px;
-  margin-left: -50px;
   cursor: pointer;
+  margin-left: -50px;
 }
 
-.header {
+.header-container {
+  width: 100%;
+  height: 100px;
+}
+
+.header{
+  height: 80px;
+  width: 100vw;
 }
 
