--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -4,11 +4,12 @@
   overflow-y: hidden;
 }
 
-.background{
+.background-home{
   width: 100vw;
   position: absolute;
   left: 0px;
   z-index: -1;
+
 }
 
 .second-page{
@@ -24,7 +25,7 @@
   z-index: 1;
   /* border: 1px solid red; */
   margin-bottom: 50px;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .mockup{
