--- a/client/src/styles/Sidebar.css
+++ b/client/src/styles/Sidebar.css
@@ -2,11 +2,15 @@
   height: 100vh;
   width: 250px;
   background-color: #212529;
+  border-radius: 0px 20px 20px 0px;
 }
 
-.logo{
+.sidebar-logo{
   width: 200px;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-left: -30px;
+  margin-bottom: -30px;
+
 }
 
 .section-buttons{
